yiltc/testsuite/negative/not_on_int.yilt
fn foo()
    let x = not 42
